# post_service

./: .flake8  .gitignore  alembic.ini  pyproject.toml  settings.yml
src/: main.py
src/application/: amqp_handler.py  app.py  background.py  config.py  container.py
src/application/tasks/: clickhouse_table_creation.py  likes_task.py
src/domain/post/: registry.py  schema.py
src/domain/profile/: registry.py  schema.py
src/infrastructure/base_entities/: __init__.py  abs_repository.py  base_entity.py  base_filter.py  base_model.py  base_mq.py  base_rpc.py  singleton.py
src/infrastructure/broker/: kafka.py
src/infrastructure/cache/: redis_cache.py
src/infrastructure/database/: alchemy_gateway.py  clickhouse_gateway.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 2024_09_26-7ff0d799054c_create_models.py  2024_09_30-b6e5e3a40a9e_added_file_uuid.py
src/infrastructure/database/models/: __init__.py  base.py  friend.py  post.py  profile.py
src/infrastructure/exceptions/: mq_exceptions.py  profile_exceptions.py  token_exceptions.py  user_exceptions.py
src/infrastructure/handlers/: account_handler.py  asyncio_handlers.py
src/infrastructure/server/: server.py
src/presentation/: post.py  profile.py
src/service/: post_service.py  profile_service.py
