[tool.poetry]
name = "post-service"
version = "0.0.5"
description = ""
authors = ["timmashkov <bodomizer@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
SQLAlchemy = "^2.0.35"
asyncpg = "^0.29.0"
dynaconf = "^3.2.6"
aiokafka = "^0.11.0"
redis = "^5.0.8"
uvicorn = "^0.30.6"
alembic = "^1.13.2"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.8.0"
orjson = "^3.10.7"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
